--- a/src/components/SampleLayout.module.css
+++ b/src/components/SampleLayout.module.css
@@ -1,7 +1,11 @@
+
 .canvasContainer {
   text-align: center;
   position: relative;
-  margin-top: 10px;
+  margin-top: 0px;
+  width: 100% !important;
+  height: 100% !important;
+  margin-left:0 !important;
 }
 
 nav.sourceFileNav ul {
