Clean up gui, change numAgents slider to powers of two, add descriptor showing how many agents, only show agent slider for scenes that support it

--- a/src/components/SampleLayout.module.css
+++ b/src/components/SampleLayout.module.css
@@ -66,3 +66,9 @@ nav.sourceFileNav li a[data-active=true] {
 .title {
   margin-left: 20px;
 }
+
+/* -------------------- Non-WebGPU-samples CSS ---------------------- */
+.slider-fg :disabled {
+  color: red !important;
+  background-color: red !important;
+}
